--- a/cod.html
+++ b/cod.html
@@ -60,12 +60,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="image.html" style="color: white"><img src="image/complogo.jpg" alt="logo" style="width:200px; height: 50px; margin: -7% ; padding: 1%; border: 1px;"></a>
+                <a class="navbar-brand" href="index.html" style="color: white"><img src="image/complogo.jpg" alt="logo" style="width:200px; height: 50px; margin: -7% ; padding: 1%; border: 1px;"></a>
             </div>
 
             <div class="collaps navbar-collapse" id="p1">
                 <ul class="nav navbar-nav">
-                    <li class=""><a href="image.html">Home</a></li>
+                    <li class=""><a href="index.html">Home</a></li>
                     <li class=""><a href="#">About</a></li>
                     <li class=""><a href="#">Contact</a></li>
                     <li class=""><a href="https://forms.gle/FAtyv3V3A6WkoYBS8" target="_blank">Feedback</a></li>
